--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -103,8 +103,6 @@
 
 ---
 
-![](https://lisa-coes.github.io/presentaciones/tallerPrereg-PreprintEnero2022/logo-congreso.png)
-
 \#\# Documento de presentación
 
 (F para pantalla completa)
@@ -120,14 +118,7 @@
   month = feb,
   address = {Mexico},
   keywords = {Chile,legitimacy,social justice research},
-  annotation = {---},
-  note = {TY - RPT
-
-\par
-The empirical approach to the study of social justice: A research agenda for Latin America
-
-\par
-JC printed pdf}
+  annotation = {---}
 }
 
 @misc{castillo_explanations_2007a,
@@ -178,6 +169,25 @@ JC printed pdf}
   annotation = {--- [Github Repo](https://github.com/lisa-coes/presentaciones)}
 }
 
+@misc{castillo_herramientas_2024,
+  type = {Proyecto Ingeniería 2030 de la Facultad de Ingeniería de la Universidad de Valparaíso},
+  title = {Herramientas de Ciencia Abierta: Apertura y reproducibilidad de proyectos de investigación},
+  author = {Castillo, Juan-Carlos},
+  year = {2024},
+  month = jan,
+  address = {Valparaíso},
+  url = {https://uv.cl/archivo-noticias-uv/26426-director-de-investigacion-de-la-facultad-de-ciencias-sociales-uchile-dicto-taller-sobre-ciencia-abierta},
+  annotation = {url\_pdf : ""  url\_project: "" url\_slides: "https://lisa-coes.github.io/presentaciones/flujo-UCEN-Ene2023/UCEN-Ene2023.html\#1" url\_video: "" url\_poster: "" links: - icon: github   icon\_pack: fab   name: Github   web: https://github.com/lisa-coes/presentaciones 
+
+---
+
+\#\# Documento de presentación
+
+(F para pantalla completa)
+
+{$<$}iframe width="700"  height="450" src="https://lisa-coes.github.io/presentaciones/UValpo-herramientas-Enero2024/UValpo-herramientas-Ene2024.html\#1" title="Xaringan presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}}
+}
+
 @inproceedings{castillo_inequality_2010a,
   title = {Is inequality becoming just? Changes in public opinion about economic inequality in Chile},
   booktitle = {Conference of the Latin American Studies Association - LASA},
@@ -219,14 +229,7 @@ JC printed pdf}
   month = aug,
   address = {Australia, Flinders University},
   keywords = {social justice research Chile legitimacy reward justice},
-  annotation = {---},
-  note = {TY - RPT
-
-\par
-On the justice of occupational earnings in Chile: A factorial survey analysis
-
-\par
-JC printed pdf}
+  annotation = {---}
 }
 
 @inproceedings{castillo_legitimacy_2008a,
@@ -237,19 +240,12 @@ JC printed pdf}
   month = jul,
   address = {Paris},
   keywords = {social justice research Chile legitimacy reward justice},
-  annotation = {---},
-  note = {TY - RPT
-
-\par
-The legitimacy of the distributive system: a comparison of Germany and Chile
-
-\par
-JC printed pdf}
+  annotation = {---}
 }
 
 @inproceedings{castillo_legitimation_2007a,
   title = {Legitimation and Justice Ideologies in Contexts of Extreme Economic Inequalities.},
-  booktitle = {4-7 July, 2007},
+  booktitle = {4 July, 2007},
   author = {Castillo, {\relax JC}},
   year = {2007},
   address = {Portland},
@@ -332,8 +328,7 @@ JC printed pdf}
   month = sep,
   address = {Potsdam, Potsdam University},
   keywords = {legitimacy ideology Chile},
-  annotation = {---},
-  note = {pdf printed}
+  annotation = {---}
 }
 
 @misc{castillo_presentacion_2022,
@@ -389,6 +384,47 @@ JC printed pdf}
   annotation = {---}
 }
 
+@misc{castillo_social_2024,
+  type = {GlobaLab Bremen Conversations on Global Solidarity},
+  title = {Social cohesion and attitudinal changes toward migration},
+  author = {Castillo, Juan-Carlos},
+  year = {2024},
+  month = jan,
+  address = {Bremen  (Online)},
+  abstract = {The COVID-19 pandemic has impacted social interactions and coexistence around the globe in dimensions that go far beyond health issues. In the case of the Global South, the pandemic has developed along with growing South-South migratory movements, becoming another key factor that might reinforce social conflict in increasingly multicultural areas as migrants have historically served as “scapegoats” for unexpected crises as a way to control and manage diversity. Chile is one of the main destination countries for migrants from the Latin American and Caribbean region, and COVID-19 outbreaks in migrant housing have intensified discrimination. In such a context, there is a need for understanding how the pandemic has potentially changed the way non-migrants perceive and interact with migrant neighbors. Drawing on the national social cohesion panel survey study ELSOC (2016–2021, N = 2,927) the aim is to analyze the changes in non-migrants' attitudes toward migrants—related to dimensions of social cohesion—over the last years and their relation with individual status and territorial factors. We argue that social cohesion in increasingly multicultural societies is partially threatened in times of crisis. The results indicate that after the pandemic, convivial attitudes toward Latin American migrants decreased. Chileans started perceiving them more negatively, particularly those respondents with lower educational levels and who live in increasingly multicultural neighborhoods with higher rates of migrant residents.},
+  annotation = {url\_pdf : ""  url\_project: "" url\_slides: "https://ocscoes.github.io/presentaciones/global-solidarities-Jan2024/bremen\_global\_sol2024.html" url\_video: "" url\_poster: "" \# links: - icon: github   icon\_pack: fab   name: Github   web: https://github.com/ocscoes/presentaciones/tree/main/global-solidarities-Jan2024
+
+---
+
+![](https://www.hilfswerft.de/wp-content/uploads/2016/03/universitat-bremen\_f.png)
+
+\#\# Documento de presentación
+
+(F para pantalla completa)
+
+{$<$}iframe width="700"  height="450" src="https://ocscoes.github.io/presentaciones/global-solidarities-Jan2024/bremen\_global\_sol2024.html" title="Xaringan presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}}
+}
+
+@misc{castillo_social_2024a,
+  type = {Inequality Conference - Exellence Cluster  The Politics of Inequality},
+  title = {Social Inequalities in the Global South},
+  author = {Castillo, Juan-Carlos},
+  year = {2024},
+  month = apr,
+  address = {Konstanz},
+  url = {https://inequality-conference.de/session/roundtable-global-south-tbd/},
+  abstract = {Roundtable  Global South.  Economic, social and political inequalities are pressing issues for countries in the Global North and the Global South alike. At the same time, these inequalities materialize differently across these contexts. For instance, the most unequal societies, in terms of income inequality, can be found in Latin America, the Middle East and North Africa, and Sub-Saharan Africa whereas European countries rank much lower in terms of income inequality. Similarly, political and social inequalities, such as political participation or educational opportunities, but also gender and health inequalities vary significantly across world regions, too. And if we think about climate change and its consequences another layer of inequality becomes visible: while countries in the Global South have contributed little to the problem of climate change these countries feel the brunt of the impact often reinforcing existing inequalities. In contrast, countries in the Global North are mainly responsible for creating the problem in the first place, but the impact of climate change is less pronounced so far and the link to inequality less apparent. This roundtable will therefore discuss the question of inequality research in the Global South from various perspectives. It will deal with questions such as: How far does inequality across countries globally impact on inequality within countries of the Global South? What are the most important topics in inequality research coming from a Global South perspective? How much does this perspective align or contrast with the research agenda of inequality researchers in the Global North? How much does any of this depend on the specific type of inequality under study?},
+  annotation = {url\_pdf : ""  url\_project: "" url\_slides: "l" url\_poster: "" \# links: - icon: github   icon\_pack: fab   name: Github   web:  url\_video: ""
+
+---
+
+![](/images/konstanz.png) ![](https://inequality-conference.de/wp-content/uploads/2021/12/Bodenseeforum\_Aussenansicht-1024x517.jpg)
+
+Roundtable – Global South Economic, social and political inequalities are pressing issues for countries in the Global North and the Global South alike. At the same time, these inequalities materialize differently across these contexts. For instance, the most unequal societies, in terms of income inequality, can be found in Latin America, the Middle East and North Africa, and Sub-Saharan Africa whereas European countries rank much lower in terms of income inequality. Similarly, political and social inequalities, such as political participation or educational opportunities, but also gender and health inequalities vary significantly across world regions, too. And if we think about climate change and its consequences another layer of inequality becomes visible: while countries in the Global South have contributed little to the problem of climate change these countries feel the brunt of the impact often reinforcing existing inequalities. In contrast, countries in the Global North are mainly responsible for creating the problem in the first place, but the impact of climate change is less pronounced so far and the link to inequality less apparent. This roundtable will therefore discuss the question of inequality research in the Global South from various perspectives. It will deal with questions such as: How far does inequality across countries globally impact on inequality within countries of the Global South? What are the most important topics in inequality research coming from a Global South perspective? How much does this perspective align or contrast with the research agenda of inequality researchers in the Global North? How much does any of this depend on the specific type of inequality under study?
+
+Chair: Gabriele Spilker, University of Konstanz}
+}
+
 @inproceedings{castillo_socializacion_2021,
   title = {Socialización de la meritocracia: El rol de la familia y la escuela},
   booktitle = {VIII Conferencia Internacional COES: Cohesión Social en tiempos turbulentos},
@@ -430,9 +466,9 @@ JC printed pdf}
   month = jun,
   address = {Madrid},
   abstract = {Growing levels of economic inequality and income concentration have boosted research on redistributive preferences in the recent years (Becker, 2021; Rueda \& Stegmueller, 2019), understood as those beliefs about the need for economic transfers and universal access to social services by those with fewer resources, usually by the state. Information about these preferences is relevant for democratic governments as their legitimacy in part responds to their capacity to manage social justice demands. Despite the growing research in this field, until now the focus has been mostly on the adult population, sideling the question about how these preferences are developed and socialized at school age, as well as how they are influenced by social, cultural, and economic factors. Using data from 6,511 8th-grade students in Chile (Chilean Education Quality Agency Survey, 2017), this study aims at analyzing to what extent the social justice experiences at school age (for instance grade allocations), as well as meritocratic perceptions of rewards distribution in society, are related to redistributive preferences of students. As meritocracy is conceived as a system where rewards are justly distributed according to individual effort and talent (Young, 1958), the central hypothesis of this paper is that those students who perceive more meritocracy will exhibit fewer preferences for redistribution (Batruch et al., 2021), moderating the possible socialization impacts of the families. The results of the multilevel (random effects) estimation show that students with a higher perception of meritocracy in society actually display lower preferences for justifying access to social benefits based on individual income, however, perception of meritocracy is also associated with greater preferences for reducing the economic gap between the rich and the poor. The implications of these results for the political socialization of students by the family of origin and the school are discussed.},
-  annotation = {url\_pdf : ""  url\_project: "" url\_slides: "https://educacion-meritocracia.github.io/meritocracia-escuela-agencia/presentations//ISA-Melbourne2023/ISA2023.html" url\_video: "" url\_poster: "" \# links: - icon: github   icon\_pack: fab   name: Github   web: https://github.com/educacion-meritocracia/meritocracia-escuela-agencia/
+  annotation = {url\_pdf : ""  url\_project: "" url\_slides: "https://educacion-meritocracia.github.io/meritocracia-escuela-agencia/presentations//ISA-Melbourne2023/ISA2023.html" url\_video: "" url\_poster: "" \# links: - icon: github   icon\_pack: fab   name: Github   web: "https://github.com/educacion-meritocracia/meritocracia-escuela-agencia/"
 
----
+--- 
 
 ![](https://ocscoes.github.io/presentaciones/images/ISA.png)
 
@@ -552,6 +588,21 @@ Video: https://www.youtube.com/watch?v=n4bnM7bomzI\&t=1s}
 (F para pantalla completa)
 
 {$<$}iframe width="700"  height="450" src="https://justicia-distributiva.github.io/factorial-impuestos/presentations/ESRA-milan-2023/presentation-esra-2023.html\#1" title="Xaringan presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}}
+}
+
+@misc{maldonado_does_2024,
+  type = {Poster presented at the Inequality Conference - Exellence Cluster  The Politics of Inequality},
+  title = {Does information about inequality affects opportunity beliefs? Results from a survey experiment},
+  author = {Maldonado, Luis and Castillo, Juan-Carlos and Iturra, Julio},
+  year = {2024},
+  month = apr,
+  address = {Konstanz},
+  url = {https://inequality-conference.de/},
+  abstract = {In advanced economies, there has been an increase in socio-economic inequality. However, a significant portion of voters in these societies are misinformed about inequality. What occurs when these misperceptions are corrected? Experimental studies have explored the impact of accurate information on perceptions and preferences for redistribution, but their findings are contradictory. While some studies suggest that accurate information heightens concerns about inequality and can even lead to an increased demand for redistribution, other research indicates that learning about income inequality does not have significant effects. Two factors contribute to the explanation of these findings. Firstly, many of the studies assume that exposing people to accurate information will lead to the correction of misperceptions. However, responses to information can vary widely, as awareness of social structure is often tightly constrained by the social circles in which individuals reside. Secondly, the research conducted to date has been predominantly limited to a handful of advanced industrial countries that have witnessed increasing economic inequality in recent decades. However, what happens in a counterfactual scenario? What can we expect when individuals are exposed to accurate information in contexts where poverty is decreasing? The present study addresses this question by investigating whether exposure to information about decreasing poverty influences perceptions regarding the importance of structural and individual factors in 'getting ahead.' We expect heterogenous citizen’s responses. One of our main hypotheses is that information about poverty reduction in society weakens the belief in individual opportunity factors and strengthens the belief in structural factors among individuals at the lower end of the income distribution. We test our hypotheses through a panel survey experiment using the case of Chile. Chilean society is an excellent case study because this nation has undergone significant changes in recent decades, with a substantial decrease in the level of poverty being one of the most prominent transformations. We leverage this trend in designing our treatments. The experiments were administered to 1,781 Chileans in 2019 and 2020 through a company that provides online convenience and heterogenous samples in Latin America. Findings indicate that information about poverty reduction in society increases the support for the role of social origin in getting ahead in the life. Results regarding causal heterogeneity suggest that treatments have very strong effects on the belief in the structural factor for low-income groups and respondents with attachment to egalitarian beliefs. These effects persist even one month. We discuss implications of these results.},
+  collaborator = {Olivos, Francisco and Atria, Jorge},
+  annotation = {---
+
+![](/images/poster-konstanz.png)}
 }
 
 @misc{miranda_youth_2022,
