--- a/content/tesis/tesis.bib
+++ b/content/tesis/tesis.bib
@@ -16,6 +16,58 @@
 el objetivo final de esta investigación consiste en realizar un aporte a la visión que se tiene respecto al compromiso cı́vico juvenil chileno de una manera especı́fica, y desde una aproximación cuantitativa al problema, que sirva como complemento a los estudios previamente realizados sobre este tema, los cuales han sido mayoritariamente de carácter cualitativo (Martı́nez and Cumsille, 2010; Martı́nez et al., 2010, 2012). Esto, con el afán de comprender de mejor manera cómo es que el compromiso cı́vico se da en esta etapa, dándole énfasis a ciertos factores que generan desigualdad a nivel individual, y con ello, generar evidencia que ayude a la generación de instancias y programas que lo fomenten a futuro. Para efectuar los análisis correspondientes se utilizaron los datos provistos por la “Encuesta Jóvenes, Participación y Consumo de Medios” realizada por la Escuela de Perio- dismo de la Universidad Diego Portales en conjunto con Feedback (agencia profesional de encuestas), especı́ficamente sus versiones para el año 2010 y 2014, ambos años posteriores a las últimas elecciones presidenciales en Chile. Este instrumento se prefiere por sobre otros por las temáticas especı́ficas que aborda, y porque cuenta con indicadores claves para medir el compromiso cı́vico de la manera propuesta. Además, cuenta con datos más actualizados en comparación con otras encuestas dirigidas a la juventud chilena, lo que permite visualizar los cambios ocurridos en el último tiempo (a partir de los años 2011-2012).}
 }
 
+@phdthesis{acevedo_evaluacion_2014,
+  type = {Taller titulación - pregrado sociología},
+  title = {Evaluación de la implementación, gestión y utilización de la Ley 20.500},
+  author = {Acevedo, Verónica and Arellano, Candela},
+  year = {2014},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
+@phdthesis{ajraz_prevencion_2015,
+  type = {Taller titulación - pregrado sociología},
+  title = {Prevención en salud mental en la Atención Primaria de Salud},
+  author = {Ajraz, Nassim and Sanchez, Natalia},
+  year = {2015},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
+@phdthesis{amenabar_discusion_2015,
+  type = {Taller titulación - pregrado sociología},
+  title = {Discusión teórica y empírica sobre la élite económica chilena},
+  author = {Amenábar, Josefina and Sánchez, Javiera},
+  year = {2015},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
+@phdthesis{barros_todos_2015,
+  type = {Taller titulación - pregrado sociología},
+  title = {Todos somos amigos, pero unos más que otros	  ~ Estudio	  ~exploratorio	  ~sobre	  ~segregación	  ~en	  ~la	  ~ sala	  ~de	  ~clases},
+  author = {Barros, María José and Torres, Pablo},
+  year = {2015},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
 @phdthesis{beck_explorando_2019a,
   type = {Magister en Sociología},
   title = {Explorando la asociación entre redes de contacto ocupacionales y la justificación de la desigualdad social en Chile},
@@ -101,6 +153,32 @@ Tomando en cuenta el objetivo general de esta investigación mencionado con ante
 {$<$}iframe src="https://www.dropbox.com/s/deuxlftbcst5khk/Entrega\%20Final\%20Francisca\%20Castro\_backup.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
+@phdthesis{concha_facilitadores_2018,
+  type = {Taller titulación - pregrado sociología},
+  title = {Facilitadores y limitantes en la contratación de migrantes desde el empleador del sector terciario de producción},
+  author = {Concha, Juan Francisco and Saavedra, María Belén},
+  year = {2018},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
+@phdthesis{contreras_construyendo_2017,
+  type = {Taller titulación - pregrado sociología},
+  title = {Construyendo Involucramiento Comunitario: casos de Parque Metropolitano Cerro Chena y Mapocho Limpio},
+  author = {Contreras, Pablo and Terra, Valentina},
+  year = {2017},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
 @phdthesis{cortinez_efecto_2022,
   type = {Licenciatura en Sociología},
   title = {El efecto de las creencias meritocráticas sobre las atribuciones de pobreza y riqueza},
@@ -116,6 +194,32 @@ Tomando en cuenta el objetivo general de esta investigación mencionado con ante
 Las investigaciones sociológicas que analizan las causas de las atribuciones de pobreza y riqueza -esto es, cómo se explican las causas de la pobreza y la riqueza- suelen hacerlo desde la hipótesis de que existe como motivación de base un interés racional, y se le relaciona con el mérito sin contar con el respaldo de un trabajo empírico. Luego de grandes transformaciones económicas, políticas y socioculturales, hoy se evidencia en Chile un fuerte discurso meritocrático por parte de autoridades como también en la población en general. Por ello, se torna relevante la pregunta de ¿Cómo se relacionan las creencias meritocráticas con las atribuciones de pobreza y riqueza en Chile? La agenda liberal de justicia de mercado afirma que la igualdad de oportunidades a partir de mecanismos meritocráticos combate las desigualdades socioeconómicas. La presente investigación debate con esta lógica, y se posiciona bajo la idea de que las creencias meritocráticas legitiman las desigualdades socioeconómicas. Específicamente, se plantea que, a mayor percepción meritocrática, mayores serán las explicaciones que responsabilizan al individuo por su situación de pobreza o riqueza. Utilizando datos del proyecto Fondecyt N° 1160921, los resultados muestran que, a mayor percepción meritocrática, mayores son las atribuciones internas -individualistas- hacia la pobreza y la riqueza. En este sentido, mantener creencias meritocráticas legitima las desigualdades socioeconómicas mediante la responsabilización de los individuos de su propia posición en la sociedad. Para cerrar se reflexiona en torno los aportes, limitaciones y proyecciones que puede tener la investigación.
 
 \# Resumen}
+}
+
+@phdthesis{garcia_relevancia_2017,
+  type = {Taller titulación - pregrado sociología},
+  title = {Relevancia de la Convocatoria de Investigación en Educación del Consejo Nacional de Educación en la trayectoria académica de los finalistas adjudicados y no adjudicados de los años 2014. 2015 y 2016.},
+  author = {García, Javier and Riquelme, Valentina},
+  year = {2017},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
+@phdthesis{gonzalezide_chile_2018,
+  type = {Taller titulación - pregrado sociología},
+  title = {Chile: Sociodemografía e inser- ción laboral de los inmigrantes re- cientes. El caso de los haitianos y venezolanos.},
+  author = {González Ide, Andrés and González, Daniel},
+  year = {2018},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
 }
 
 @phdthesis{herrera_que_2023,
@@ -178,6 +282,24 @@ El aumento de la desigualdad económica y la concentración de la riqueza se han
 **Palabras clave**: conflicto social, percepciones de conflicto, clase social, desigualdad económica, corporativismo.}
 }
 
+@phdthesis{larenas_conflicto_2024,
+  type = {Licenciatura en Sociología},
+  title = {El conflicto intercultural entre el estado chileno y la causa mapuche por autodeterminación},
+  author = {Larenas, Paula},
+  year = {2024},
+  address = {Santiago de Chile},
+  abstract = {Esta memoria se interroga sobre cómo inciden las relaciones interculturales mapuche-chileno en la percepción del conflicto en la macrozona sur en personas mayores de edad que residen en la Región Metropolitana, Bío-Bío, Araucanía, Los Ríos y Los Lagos. La hipótesis sugiere que la percepción del conflicto se incremente a medida que aumenta la percepción negativa de lo mapuche. Se ponen en juego un total de 17 variables a partir del análisis del Estudio longitudinal de relaciones interculturales (ELRI) y se despliega una estrategia analítica que incluye análisis factorial, correlaciones y regresiones. Los hallazgos señalan que una posición favorable frente a las demandas del pueblo mapuche se relaciona con una percepción positiva del conflicto y una posición favorable al actuar de carabineros y la preponderancia de lo chileno sobre lo mapuche se relaciona con una percepción negativa del conflicto. Se concluye que el análisis realizado contribuye a la comprensión de las relaciones de interculturalidad y sus efectos sobre la percepción del conflicto mapuche.},
+  school = {Departamento de Sociología, Facultad de Ciencias Sociales, Universidad de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: graduation-cap   icon\_pack: fa   name: Prof. Guía   web: /tag/guia-o-cotutor/
+
+---
+
+\# Resumen
+
+Esta memoria se interroga sobre cómo inciden las relaciones interculturales mapuche-chileno en la percepción del conflicto en la macrozona sur en personas mayores de edad que residen en la Región Metropolitana, Bío-Bío, Araucanía, Los Ríos y Los Lagos. La hipótesis sugiere que la percepción del conflicto se incremente a medida que aumenta la percepción negativa de lo mapuche. Se ponen en juego un total de 17 variables a partir del análisis del Estudio longitudinal de relaciones interculturales (ELRI) y se despliega una estrategia analítica que incluye análisis factorial, correlaciones y regresiones. Los hallazgos señalan que una posición favorable frente a las demandas del pueblo mapuche se relaciona con una percepción positiva del conflicto y una posición favorable al actuar de carabineros y la preponderancia de lo chileno sobre lo mapuche se relaciona con una percepción negativa del conflicto. Se concluye que el análisis realizado contribuye a la comprensión de las relaciones de interculturalidad y sus efectos sobre la percepción del conflicto mapuche.}
+}
+
 @phdthesis{meneses_lenguaje_2023,
   type = {Magister en Ciencias Sociales},
   title = {El lenguaje como brecha de la formación ciudadana: El rol de la comprensión lectora sobre las habilidades para la ciudadanía y el conocimiento cívico.},
@@ -236,6 +358,32 @@ Para poder dar respuesta a estas preguntas de investigación se requiere en prim
 \# Resumen El sistema de educación superior chileno ha experimentado profundas transformaciones durante las últimas décadas. Una de ellas ha sido la considerable expansión en términos de cobertura, en gran parte posibilitada por la ampliación y diversificación de las ayudas financieras -becas y créditos- provistas por parte del Estado. Sin embargo, los avances en materia de acceso no vinieron acompañados de la generación de condiciones que favorezcan la retención y la permanencia, persistiendo aún elevadas tasas de deserción en el sistema. En este escenario, la presente investigación se centró en las trayectorias académicas de los estudiantes pertenecientes a la cohorte de ingreso del año 2016, con el fin de indagar en la influencia que las ayudas financieras estatales anteriormente mencionadas -en particular la reciente política de gratuidad- tienen sobre la probabilidad de abandonar permanentemente los estudios superiores. Como hipótesis principales, se planteó que: i) contar con ayudas financieras se asociaría con una menor probabilidad de desertar; y ii) los estudiantes beneficiados con el Crédito con Garantía Estatal (CAE) presentarían una menor probabilidad de desertar en comparación con aquellos beneficiarios de la gratuidad, así como también con quienes cuentan con el Fondo Solidario de Crédito Universitario (FSCU). A partir de datos provenientes de diversas fuentes estadísticas de educación superior de organismos estatales entre los años 2016 y 2020, se clasificó a los estudiantes en función de sus trayectorias académicas y se construyeron tablas de contingencia y modelos de regresiones logísticas para evaluar el efecto que las diferentes ayudas económicas tienen sobre la probabilidad de ocurrencia del fenómeno. Los resultados indican que los beneficiarios de ayudas financieras efectivamente contaron con una menor probabilidad de abandonar los estudios, y pese a que quienes contaron con CAE también presentaron una menor probabilidad de deserción en comparación con quienes accedieron a gratuidad, esta diferencia no fue demasiado significativa. Se identificó, también, que la probabilidad de deserción disminuyó entre quienes combinaron becas y créditos en contraposición a quienes solo contaron con una beca, demostrando que un aumento en el compromiso económico incide en una menor probabilidad de abandono.}
 }
 
+@phdthesis{moller_mecanismos_2017,
+  type = {Taller titulación - pregrado sociología},
+  title = {Mecanismos de participación ciudadana},
+  author = {Moller, Alonso and Zúñiga, Gabriela},
+  year = {2017},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
+@phdthesis{munoz_formacion_2017,
+  type = {Taller titulación - pregrado sociología},
+  title = {La Formación Continua en Docencia del Profesorado Universitario Efectos sobre la práctica y autopercepción docente},
+  author = {Muñoz, Cristian and Cofré, Raúl},
+  year = {2017},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
+}
+
 @phdthesis{munoz_justicia_2017,
   type = {Magister en Sociología},
   title = {Justicia de las pensiones en Chile: una evaluación desde las características individuales y las preferencias distributivas de la población en la Región Metropolitana},
@@ -255,6 +403,19 @@ Para poder dar respuesta a estas preguntas de investigación se requiere en prim
 Esta tesis busca aportar al debate sobre las pensiones de vejez en Chile desde la justicia social empírica. La pregunta principal que se busca responder es ¿qué características sociodemográficas y cuáles preferencias distributivas son tomadas en cuenta al evaluar la justicia (o injusticia) de una pensión en Chile? Otras preguntas que motivan este trabajo son: ¿cómo es la distribución actual de las pensiones? ¿qué se considera una pensión justa hoy en Chile? Y ¿cómo varían estas distribuciones en la población? Para evaluar la justicia de las pensiones en Chile se utiliza la conocida función de evaluación de justicia de Jasso (1978), que permite cuantificar escenarios de justicia e injusticia sobre determinados bienes. Los datos corresponden a la primera y segunda ola de la encuesta “Estudio Desigualdad, Justicia Social y Participación Política” (2014), perteneciente al proyecto FONDECYT 11121203. La muestra final es de 416 observaciones. Se estiman modelos de selección de Heckman para evaluar la justicia de las pensiones. Los resultados indican que las evaluaciones sobre la justicia de las pensiones dependen tanto de factores sociodemográficos, como también de preferencias distributivas. Además, estos resultados vienen a confirmar los hallazgos de investigaciones recientes sobre las pensiones en Chile, tanto por el pesimismo respecto de éstas, como por las expectativas sobre lo que se considera una pensión razonable o, en este caso, una pensión justa.
 
 {$<$}iframe src="https://www.dropbox.com/s/xv5ou2r0jyebzou/Tesis\%20-\%20Esteban\%20Munoz\_entrega\%20final.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+}
+
+@phdthesis{nogueira_practicas_2018,
+  type = {Taller titulación - pregrado sociología},
+  title = {Prácticas de inclusión y exclusión de estudiantes en situación de migración: Un estudio de caso en dos escuelas municipales de la comuna de renca en santiago},
+  author = {Nogueira, Amanda and Lihn, Teresa},
+  year = {2018},
+  address = {Santiago de Chile},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Miembro comité evaluador},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: square-check   icon\_pack: fa   name:     web: 
+
+---}
 }
 
 @phdthesis{plaza_intereses_2019,
@@ -277,6 +438,25 @@ La presente investigación examina cómo la movilidad social objetiva y subjetiv
 **Palabras Clave**: Movilidad Social, Preferencias Redistributivas, Estado de Bienestar, Desigualdad, Desarrollo Económico.\# Documento
 
 {$<$}iframe src="https://www.dropbox.com/s/1m5sl1c3ikaw2dr/Tesis-Magister\_-Alejandro-Plaza\_-12012018.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+}
+
+@phdthesis{retamales_rol_2024,
+  type = {Magister en Ciencias Sociales},
+  title = {El rol de la socialización familiar y escolar en la percepción de meritocracia en las notas: Un estudio multinivel de estudiantes en Chile},
+  author = {Retamales, Matías},
+  year = {2024},
+  month = mar,
+  address = {Santiago de Chile},
+  abstract = {La meritocracia en las notas recientemente ha concitado discusión, pues a la vez que aporta como un currículum oculto de la formación ciudadana, es capaz de moldear en los estudiantes actitudes hacia la desigualdad. Esta investigación se centra en cómo se forman los estudiantes las percepciones de meritocracia en las notas durante la etapa escolar, distinguiendo entre la importancia del esfuerzo y el talento, considerando el rol que cumple la familia y la escuela como agentes socializadores. Utilizando datos de estudiantes y sus familias en Chile (N = 5.599 estudiantes de 231 escuelas), se analiza la medida en que las percepciones de meritocracia del apoderado, el trato justo de los profesores en la escuela y el estatus social familiar y escolar, se relacionan con las percepciones de meritocracia en las notas de los estudiantes. A partir de modelos multinivel ordinales, los resultados corroboran parcialmente que las percepciones meritocráticas del apoderado se transmiten en los estudiantes como percepciones de meritocracia en las notas, sucediendo algo similar en el caso de la relación con el trato justo de los profesores en la escuela. Asimismo, se aporta con evidencia de que tanto el estatus social familiar como el escolar, cumplen un rol en la formación de las percepciones de meritocracia en las notas. Estos resultados sugieren que tanto la familia como la escuela cumplen un rol de socialización, aunque de forma distinta entre la importancia del esfuerzo y la importancia del talento para obtener buenas notas.},
+  school = {Departamento de Sociología, Facultad de Ciencias Sociales, Universidad de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: "" links: - icon: graduation-cap   icon\_pack: fa   name: Prof. Guía   web: /tag/guia-o-cotutor/
+
+---
+
+\# Resumen
+
+La meritocracia en las notas recientemente ha concitado discusión, pues a la vez que aporta como un currículum oculto de la formación ciudadana, es capaz de moldear en los estudiantes actitudes hacia la desigualdad. Esta investigación se centra en cómo se forman los estudiantes las percepciones de meritocracia en las notas durante la etapa escolar, distinguiendo entre la importancia del esfuerzo y el talento, considerando el rol que cumple la familia y la escuela como agentes socializadores. Utilizando datos de estudiantes y sus familias en Chile (N = 5.599 estudiantes de 231 escuelas), se analiza la medida en que las percepciones de meritocracia del apoderado, el trato justo de los profesores en la escuela y el estatus social familiar y escolar, se relacionan con las percepciones de meritocracia en las notas de los estudiantes. A partir de modelos multinivel ordinales, los resultados corroboran parcialmente que las percepciones meritocráticas del apoderado se transmiten en los estudiantes como percepciones de meritocracia en las notas, sucediendo algo similar en el caso de la relación con el trato justo de los profesores en la escuela. Asimismo, se aporta con evidencia de que tanto el estatus social familiar como el escolar, cumplen un rol en la formación de las percepciones de meritocracia en las notas. Estos resultados sugieren que tanto la familia como la escuela cumplen un rol de socialización, aunque de forma distinta entre la importancia del esfuerzo y la importancia del talento para obtener buenas notas.}
 }
 
 @phdthesis{rojas_dimension_2018,
