--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -479,19 +479,6 @@
   annotation = {---}
 }
 
-@inproceedings{castillo_justice_2006a,
-  title = {Justice Ideologies in Highly Unequal Contexts. The Case of Chile in Comparative Perspective},
-  booktitle = {Poster presented at the 11th conference of the International Society for Justice Research},
-  author = {Castillo, Juan-Carlos},
-  year = {2006},
-  month = aug,
-  publisher = {Humboldt University},
-  address = {Berlin},
-  keywords = {legitimacy ideology Chile},
-  annotation = {---},
-  file = {/home/juank/Dropbox/zoterojcydocs/storage/KMDNDPJZ/Castillo - 2006 - Justice Ideologies in Highly Unequal Contexts. The.pdf}
-}
-
 @book{castillo_legitimacy_2011,
   title = {The legitimacy of economic inequality: An empirical approach to the case of Chile},
   author = {Castillo, Juan-Carlos},
@@ -636,9 +623,12 @@
   year = {2023},
   month = oct,
   journal = {International Journal of Sociology},
-  volume = {Accepted for publication},
+  volume = {Online first},
+  doi = {10.1080/00207659.2023.2274712},
   abstract = {A great part of the comparative international research that has attempted to measure meritocratic beliefs has used the social inequality module of the ISSP (International Social Survey Programme), which offers an unprecedented opportunity to compare meritocratic views in different societies. Based on a series of studies using ISSP data, the present paper proposes a multidimensional measurement framework for meritocratic beliefs. This framework dis- tinguishes, on the one side, between perceptions and preferences and, on the other side, between meritocratic and not meritocratic aspects. In the first study, we test the multidimensional framework for meritocratic beliefs using the ISSP 2009 inequality module through confirmatory factor analysis (CFA) techniques. After identify- ing the advantages and some limitations of ISSP items for a multidi- mensional operationalization of meritocratic beliefs, in a second study, we suggest a modified set of items that better taps the differ- ent dimensions of meritocracy. We examined the measuring proper- ties of this new instrument using a sample of Chilean adults (N ¼ 2,141). Based on these results, we recommend improvements in measuring meritocratic beliefs in cross-national studies.},
-  annotation = {---}
+  annotation = {---
+
+![](https://www.tandfonline.com/doi/cover-img/10.1080/mijs20.v053.i05)}
 }
 
 @article{castillo_percepcion_2012,
@@ -881,7 +871,9 @@
   abstract = {Perceptions of economic inequality (PEI) play a central role in people’s responses to inequality. We aim to examine the consistency between different PEI measures (income gaps, diagrammatic figures, experienced downward and upward disparities), their relationship with objective inequality, and their association with redistributive preferences. Using data from the International Social Survey Programme 2019 (N = 34,387, 22 countries), we performed multilevel regression analyses and found that PEI indicators were weakly and positively correlated, suggesting that they represent different dimensions of the same construct. Furthermore, objective inequality was not related to PEI measures. Finally, all PEI measures were positively associated with support for redistribution, except for experienced upward inequality. We discuss the multidimensional nature of PEI and its implications on redistributive preferences.},
   annotation = {url\_pdf : "" url\_preprint: "" url\_dataset: "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: "" links: - icon: osf   icon\_pack: ai   name: Pre-registration   web: https://osf.io/muv9r/
 
----},
+---
+
+-},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/KSIMHTFP/García-Castro et al. - 2022 - Perceived economic inequality measures Their refl.pdf}
 }
 
@@ -940,7 +932,9 @@
   doi = {10.24201/es.2023v41n122.2260},
   url = {https://jciturras.github.io/desigualdad_recom/paper.pdf},
   abstract = {Este estudio analiza el efecto de la información factual sobre desigualdad económica en la justificación de desigualdad salarial. Se implementó un diseño experimental a través de encuestas en una muestra representativa del área metropolitana de Santiago de Chile (n=732), con el objetivo de replicar los resultados reportados por Kriss-Stella Trump (2017) para el contexto de Suecia y Estados Unidos en torno a la justificación de brechas salariales. Nuestros resultados muestran que la información sobre salarios reales no impacta la justificación de la brecha salarial global. Sin embargo, se evidenció que la información sobre desigualdad salarial incrementa la justificación de brechas salarial según ocupaciones de alto y bajo estatus, lo cual es potenciado por la exposición conjunta a la condición que busca motivar la justificación del sistema social. Se discuten las limitantes metodológicas del estudio, en conjunto de las implicancias de la evidencia sobre el estudio sustantivo de actitudes hacia la desigualdad y la redistribución económica.},
-  annotation = {--- [Github repo](https://github.com/jciturras/desigualdad\_recom)}
+  annotation = {---
+
+[Github repo](https://github.com/jciturras/desigualdad\_recom)}
 }
 
 @article{maderocabib_sobre_2012,
